<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_back"
        android:orderInCategory="10"
        android:icon="@drawable/back"
        android:title="@string/back"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.Button" />
    <item android:id="@+id/text"
        android:orderInCategory="10"
        android:title="@string/change_music"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:orderInCategory="10"
        android:icon="@drawable/add_music_icon"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.Button" />

</menu>