<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/VkBaseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:id="@+id/podcast_image_preview_iv"
                    style="@style/VkPodcastImagePreview"
                    android:layout_width="@dimen/vk_podcast_image_preview_size"
                    android:layout_height="@dimen/vk_podcast_image_preview_size"
                    android:scaleType="centerCrop" />

                <ImageButton
                    android:id="@+id/podcast_play_button"
                    style="@style/VkPodcastPlayButton"
                    android:layout_width="@dimen/vk_podcast_image_preview_size"
                    android:layout_height="@dimen/vk_podcast_image_preview_size" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/podcast_title_tv"
                    style="@style/VkPreviewBlockTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    tools:text="Подкаст прекрасных людей" />

                <TextView
                    android:id="@+id/podcast_publisher_link_tv"
                    style="@style/VkLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="Сообщество 'ПапаDogs'" />

                <TextView
                    android:id="@+id/podcast_time_tv"
                    style="@style/VkTextSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    tools:text="Длительность: 59:16" />
            </LinearLayout>
        </LinearLayout>

        <View
            style="@style/VkSeparator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vk_separator_height"
            android:layout_marginBottom="14dp" />

        <TextView
            style="@style/VkPreviewBlockTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/podcast_preview_description_block_title" />

        <TextView
            android:id="@+id/podcast_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:letterSpacing="0.01"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:text="Подкаст, который рассказывает про то, как много в мире прекрасных вещей, которые можно совершить, а также сколько людей, которые могут помочь вам в реализации ваших заветных мечт." />

        <View
            style="@style/VkSeparator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/vk_separator_height"
            android:layout_marginBottom="14dp" />

        <TextView
            style="@style/VkPreviewBlockTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/podcast_preview_timecodes_block_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/timecode_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        style="@style/VkButtonFilled.Large"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/podcast_publish" />
</RelativeLayout>